added font family avenir next

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -10,5 +10,8 @@ $color-green-light: #95CD32;
 $color-green: #32CD32;
 $color-blue-light: #337ab7;
 // FONTS
-$font-mr: 'montserratRegular';
-$font-msb: 'montserratSemiBold';
+$font-anr: 'avenirNextRegular';
+$font-anb: 'avenirNextBold';
+$font-anbcn: 'avenirNextBoldCn';
+$font-ancn: 'avenirNextCn';
+$font-anmcn: 'avenirNextMediumCn';
