--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2621,15 +2621,27 @@ p, h1, h2, h3, h4, h5, h6, ul, li,
     font-size: 81.3%; } }
 
 @font-face {
-  font-family: montserratRegular;
-  src: url(../fonts/Montserrat/Montserrat-Regular.ttf) format("opentype"); }
+  font-family: avenirNextBold;
+  src: url(../fonts/AvenirNext/AvenirNext-Bold.otf) format("opentype"); }
 
 @font-face {
-  font-family: montserratSemiBold;
-  src: url(../fonts/Montserrat/Montserrat-SemiBold.ttf) format("opentype"); }
+  font-family: avenirNextBoldCn;
+  src: url(../fonts/AvenirNext/AvenirNext-BoldCn.otf) format("opentype"); }
+
+@font-face {
+  font-family: avenirNextCn;
+  src: url(../fonts/AvenirNext/AvenirNext-Cn.otf) format("opentype"); }
+
+@font-face {
+  font-family: avenirNextMediumCn;
+  src: url(../fonts/AvenirNext/AvenirNext-MediumCn.otf) format("opentype"); }
+
+@font-face {
+  font-family: avenirNextRegular;
+  src: url(../fonts/AvenirNext/AvenirNext-Regular.otf) format("opentype"); }
 
 body {
-  font-family: "montserratRegular", Arial, sans-serif;
+  font-family: "avenirNextRegular", Arial, sans-serif;
   font-weight: 300;
   line-height: 1;
   color: #2d2d2d; }
