--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,15 +1,30 @@
 @font-face {
-    font-family: montserratRegular;
-    src: url(../fonts/Montserrat/Montserrat-Regular.ttf) format("opentype");
+    font-family: avenirNextBold;
+    src: url(../fonts/AvenirNext/AvenirNext-Bold.otf) format("opentype");
 }
 
 @font-face {
-    font-family: montserratSemiBold;
-    src: url(../fonts/Montserrat/Montserrat-SemiBold.ttf) format("opentype");
+    font-family: avenirNextBoldCn;
+    src: url(../fonts/AvenirNext/AvenirNext-BoldCn.otf) format("opentype");
+}
+
+@font-face {
+    font-family: avenirNextCn;
+    src: url(../fonts/AvenirNext/AvenirNext-Cn.otf) format("opentype");
+}
+
+@font-face {
+    font-family: avenirNextMediumCn;
+    src: url(../fonts/AvenirNext/AvenirNext-MediumCn.otf) format("opentype");
+}
+
+@font-face {
+    font-family: avenirNextRegular;
+    src: url(../fonts/AvenirNext/AvenirNext-Regular.otf) format("opentype");
 }
 
 body {
-    font-family: $font-mr, Arial, sans-serif;
+    font-family: $font-anr, Arial, sans-serif;
     font-weight: 300;
     line-height: 1;
     color: $color-black;
