--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2596,19 +2596,23 @@ p, h1, h2, h3, h4, h5, h6, ul, li,
   box-shadow: unset;
   box-sizing: border-box; }
 
-@media only screen and (min-width: 1401px) {
+@media only screen and (min-width: 1601px) {
+  html {
+    font-size: 118.75%; } }
+
+@media only screen and (min-width: 1441px) and (max-width: 1600px) {
   html {
     font-size: 112.5%; } }
 
-@media only screen and (min-width: 1301px) and (max-width: 1400px) {
+@media only screen and (min-width: 1367px) and (max-width: 1440px) {
   html {
     font-size: 106.25%; } }
 
-@media only screen and (min-width: 1201px) and (max-width: 1300px) {
+@media only screen and (min-width: 1281px) and (max-width: 1366px) {
   html {
     font-size: 100%; } }
 
-@media only screen and (min-width: 769px) and (max-width: 1200px) {
+@media only screen and (min-width: 769px) and (max-width: 1280px) {
   html {
     font-size: 93.75%; } }
 
@@ -2641,6 +2645,7 @@ p, h1, h2, h3, h4, h5, h6, ul, li,
   src: url(../fonts/AvenirNext/AvenirNext-Regular.otf) format("opentype"); }
 
 body {
+  font-size: 1rem;
   font-family: "avenirNextRegular", Arial, sans-serif;
   font-weight: 300;
   line-height: 1;
