--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -1,50 +1,50 @@
 // MEDIA QUERIES CHANGES FONT-SIZE
 @mixin respond($breakpoint) {
     // Mobile small
-    @if $breakpoint==mobile {
+    @if $breakpoint==xs {
         @media only screen and (max-width: 575px) {
             @content
         }
     ;
     }
-    // Mobile HD
-    @if $breakpoint==mobile-hd {
+    // Mobile
+    @if $breakpoint==sm {
         @media only screen and (min-width: 576px) and (max-width: 768px) {
             @content
         }
     ;
     }
-    // Mobile FULL-HD
-    @if $breakpoint==mobile-full-hd {
-        @media only screen and (min-width: 750px) and (max-width: 828px) and (min-height: 1334px) and (max-height: 1792px){
+    // Desktop 1280x800 or 1280x720 or 1280x1024
+    @if $breakpoint==md {
+        @media only screen and (min-width: 769px) and (max-width: 1280px) {
             @content
         }
     ;
     }
-    // Desktop 1024 x 768
-    @if $breakpoint==desk {
-        @media only screen and (min-width: 769px) and (max-width: 1200px) {
+    // Desktop 1366x768
+    @if $breakpoint==lg {
+        @media only screen and (min-width: 1281px) and (max-width: 1366px) {
             @content
         }
     ;
     }
-    // Desktop 1280 x 1024 or 1280 x 800
-    @if $breakpoint==med-desk {
-        @media only screen and (min-width: 1201px) and (max-width: 1300px) {
+    // Desktop 1440x900
+    @if $breakpoint==xl {
+        @media only screen and (min-width: 1367px) and (max-width: 1440px) {
             @content
         }
     ;
     }
-    // Desktop HD 1366 x 768
-    @if $breakpoint==big-desk {
-        @media only screen and (min-width: 1301px) and (max-width: 1400px) {
+    // Desktop 1600x900
+    @if $breakpoint==xxl {
+        @media only screen and (min-width: 1441px) and (max-width: 1600px) {
             @content
         }
     ;
     }
-    // Desktop Full HD 1920 x 1080
-    @if $breakpoint==full-hd {
-        @media only screen and (min-width: 1401px) {
+    // Desktop 1601+
+    @if $breakpoint==fhd {
+        @media only screen and (min-width: 1601px) {
             @content
         }
     ;
