--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2649,4 +2649,4 @@ body {
   font-family: "avenirNextRegular", Arial, sans-serif;
   font-weight: 300;
   line-height: 1;
-  color: #2d2d2d; }
+  color: #333333; }
