--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color-grey-light: #F1F1F1;
 $color-grey: #888888;
 $color-grey-dark: #5B5B5B;
 $color-blue: #007EAf;
+$color-blue-darken: darken(#007EAf, 10%);
 $color-blue-light: #e5f8fd;
 $color-yellow: #FEED35;
 // FONTS
