--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -4,49 +4,46 @@
     @if $breakpoint==xs {
         @media only screen and (max-width: 575px) {
             @content
-        }
-    ;
+        };
     }
     // Mobile
     @if $breakpoint==sm {
         @media only screen and (min-width: 576px) and (max-width: 768px) {
             @content
-        }
-    ;
+        };
     }
     // Desktop 1280x800 or 1280x720 or 1280x1024
     @if $breakpoint==md {
         @media only screen and (min-width: 769px) and (max-width: 1280px) {
             @content
-        }
-    ;
+        };
     }
     // Desktop 1366x768
     @if $breakpoint==lg {
         @media only screen and (min-width: 1281px) and (max-width: 1366px) {
             @content
-        }
-    ;
+        };
     }
     // Desktop 1440x900
     @if $breakpoint==xl {
         @media only screen and (min-width: 1367px) and (max-width: 1440px) {
             @content
-        }
-    ;
+        };
     }
     // Desktop 1600x900
     @if $breakpoint==xxl {
         @media only screen and (min-width: 1441px) and (max-width: 1600px) {
             @content
-        }
-    ;
+        };
     }
     // Desktop 1601+
     @if $breakpoint==fhd {
         @media only screen and (min-width: 1601px) {
             @content
-        }
-    ;
+        };
     }
+}
+
+@mixin transition {
+    transition: all .2s;
 }
