--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'base/base';
 @import 'base/grid';
 @import 'base/typography';
+@import 'base/utilities';
 // COMPONENTS
 @import 'components/buttons';
 // LAYOUT
