--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,5 +17,6 @@
 @import 'layouts/footer';
 @import 'layouts/form';
 @import 'layouts/header';
+@import 'layouts/list';
 // PAGES
 @import 'pages/home';
