--- a/assets/sass/base/_utilities.scss
+++ b/assets/sass/base/_utilities.scss
@@ -7,8 +7,18 @@
     }
 }
 
-.bg {
-    &--blue {
-        background: $color-blue;
+.list {
+    &--unstyled {
+        list-style: none;
     }
+}
+
+.line-height {
+    &--lg {
+        line-height: 1.8;
+    }
+}
+
+.w-100 {
+    width: 100%;
 }
