finished sine menu mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2693,11 +2693,17 @@ body {
 .list--unstyled {
   list-style: none; }
 
+.no--decoration {
+  text-decoration: none; }
+
 .line-height--lg {
   line-height: 1.8; }
 
 .w-100 {
   width: 100%; }
+
+.u--mb-45 {
+  margin-bottom: 2rem; }
 
 .header__list-item {
   cursor: pointer;
@@ -2713,6 +2719,7 @@ body {
 
 .header__content {
   visibility: hidden;
+  cursor: auto;
   top: 2rem;
   left: -1rem;
   right: -1rem;
@@ -2742,6 +2749,63 @@ body {
     .header__menu-icon:hover {
       background-color: #00597c;
       transition: all .2s; }
+
+.header--mobile__menu {
+  top: 5rem;
+  left: -22rem;
+  transition: all .4s;
+  z-index: 3; }
+  .header--mobile__menu-icon {
+    width: 2rem;
+    height: 2px; }
+    .header--mobile__menu-icon::before, .header--mobile__menu-icon::after {
+      position: absolute;
+      content: '';
+      display: block;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background-color: #000;
+      transition: all .2s; }
+    .header--mobile__menu-icon--closed {
+      background-color: #000; }
+      .header--mobile__menu-icon--closed::before {
+        top: -0.6rem;
+        transform: rotate(0);
+        transition: all .2s; }
+      .header--mobile__menu-icon--closed::after {
+        bottom: -0.6rem;
+        transform: rotate(0);
+        transition: all .2s; }
+    .header--mobile__menu-icon--opened {
+      background-color: transparent; }
+      .header--mobile__menu-icon--opened::before {
+        top: 0;
+        transform: rotate(-135deg);
+        transition: all .2s; }
+      .header--mobile__menu-icon--opened::after {
+        bottom: 0;
+        transform: rotate(135deg);
+        transition: all .2s; }
+
+.header--mobile__logo {
+  width: 10rem; }
+
+.header--mobile__icon {
+  width: 1.6rem;
+  height: 1.6rem; }
+
+.header--mobile__list {
+  background-color: #FFF; }
+  .header--mobile__list-item {
+    color: #333333; }
+  .header--mobile__list--blue {
+    background-color: #007EAf; }
+
+.header--mobile__chevron {
+  width: 1rem;
+  height: 1rem;
+  fill: #FFF; }
 
 .list__item {
   margin-bottom: 1.7rem; }
