--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -23,6 +23,7 @@
 
     &__content {
         visibility: hidden;
+        cursor: auto;
         top: 2rem;
         left: -1rem;
         right: -1rem;
@@ -62,6 +63,88 @@
                 background-color: $color-blue-darken;
                 @include transition;
             }
+        }
+    }
+
+    &--mobile {
+        &__menu {
+            top: 5rem;
+            left: -22rem;
+            transition: all .4s;
+            z-index: 3;
+
+            &-icon {
+                width: 2rem;
+                height: 2px;
+
+                &::before,
+                &::after {
+                    position: absolute;
+                    content: '';
+                    display: block;
+                    left: 0;
+                    right: 0;
+                    height: 2px;
+                    background-color: $color-black-dark;
+                    @include transition;
+                }
+
+                &--closed {
+                    background-color: $color-black-dark;
+                    &::before {
+                        top: -0.6rem;
+                        transform: rotate(0);
+                        @include transition;
+                    }
+
+                    &::after {
+                        bottom: -0.6rem;
+                        transform: rotate(0);
+                        @include transition;
+                    }
+                }
+
+                &--opened {
+                    background-color: $color-transparent;
+                    &::before {
+                        top: 0;
+                        transform: rotate(-135deg);
+                        @include transition;
+                    }
+
+                    &::after {
+                        bottom: 0;
+                        transform: rotate(135deg);
+                        @include transition;
+                    }
+                }
+
+            }
+        }
+
+        &__logo {
+            width: 10rem;
+        }
+
+        &__icon {
+            width: 1.6rem;
+            height: 1.6rem;
+        }
+
+        &__list {
+            background-color: $color-white;
+            &-item {
+                color: $color-black;
+            }
+            &--blue {
+                background-color: $color-blue;
+            }
+        }
+
+        &__chevron {
+            width: 1rem;
+            height: 1rem;
+            fill: $color-white;
         }
     }
 }
