--- a/assets/sass/base/_utilities.scss
+++ b/assets/sass/base/_utilities.scss
@@ -14,10 +14,11 @@
     }
 }
 
-.no--decoration {
-    text-decoration: none;
+.no {
+    &--decoration {
+        text-decoration: none;
+    }
 }
-
 
 .line-height {
     &--lg {
@@ -27,6 +28,10 @@
 
 .w-100 {
     width: 100%;
+}
+
+.h-100 {
+    height: 100%;
 }
 
 .u--mb-45 {
