--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2684,6 +2684,33 @@ body {
 .text--blue {
   color: #007EAf; }
 
+.text--black {
+  color: #333333; }
+
+.heading--one {
+  font-size: 4.3rem; }
+  @media only screen and (max-width: 991px) {
+    .heading--one {
+      font-size: 2rem; } }
+
+.heading--two {
+  font-size: 3rem; }
+
+.heading--three {
+  font-size: 2.1rem; }
+  @media only screen and (max-width: 991px) {
+    .heading--three {
+      font-size: 1.2rem; } }
+
+.heading--four {
+  font-size: 1.8rem; }
+
+.heading--five {
+  font-size: 1.5rem; }
+
+.heading--six {
+  font-size: 1.1rem; }
+
 .position--relative {
   position: relative; }
 
@@ -2702,8 +2729,79 @@ body {
 .w-100 {
   width: 100%; }
 
+.h-100 {
+  height: 100%; }
+
 .u--mb-45 {
   margin-bottom: 2rem; }
+
+.btn {
+  border: unset;
+  text-align: center;
+  border-radius: 0.5rem;
+  transition: all .3s;
+  cursor: pointer; }
+  .btn--xl {
+    padding: 1.5rem 0 1.2rem 0;
+    font-size: 1.6rem;
+    width: 16.6rem; }
+    @media only screen and (max-width: 991px) {
+      .btn--xl {
+        padding: 0.8rem 0 0.5rem 0;
+        font-size: 1.2rem;
+        width: 10.5rem; } }
+  .btn--yellow {
+    color: #333333;
+    background: #FEED35; }
+    .btn--yellow::before {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 100%;
+      background: #333333;
+      border-radius: 0.5rem;
+      transition: all .35s; }
+    .btn--yellow:hover {
+      color: #FFF; }
+      .btn--yellow:hover::before {
+        width: 100%; }
+
+.logo {
+  width: 15.5rem;
+  height: auto; }
+
+.banner {
+  padding: 6rem 0 6rem 3rem; }
+  @media only screen and (min-width: 769px) and (max-width: 1280px) {
+    .banner {
+      padding: 10rem 0 10rem 4rem; } }
+  @media only screen and (min-width: 576px) and (max-width: 768px) {
+    .banner {
+      padding: 10rem 0 10rem 4rem; } }
+  @media only screen and (max-width: 575px) {
+    .banner {
+      padding: 10rem 0 10rem 4rem; } }
+  .banner__text {
+    border-bottom: dotted 1px #FFF; }
+  .banner__points {
+    background: url("../img/banner/points.png") 0 0 repeat-x;
+    height: 8.2rem;
+    left: 2px;
+    right: 2px; }
+    .banner__points--top {
+      top: 2px; }
+    .banner__points--bottom {
+      bottom: 2px;
+      transform: rotate(180deg);
+      z-index: -1; }
+  .banner__img {
+    left: 0;
+    right: 0;
+    top: 0;
+    filter: brightness(0.7);
+    z-index: -1; }
 
 .header__list-item {
   cursor: pointer;
@@ -2724,6 +2822,7 @@ body {
   left: -1rem;
   right: -1rem;
   opacity: 0;
+  z-index: 1;
   transition: all .2s; }
   .header__content--blue {
     padding: 4.3rem 6%;
@@ -2816,3 +2915,13 @@ body {
     background-color: #FFF;
     color: #007EAf;
     transition: all .2s; }
+
+.list__menu:not(:last-of-type)::after {
+  content: '';
+  display: block;
+  width: 0.4rem;
+  height: 0.4rem;
+  background-color: #333333;
+  border-radius: 0.4rem;
+  margin-left: 1rem;
+  margin-bottom: 0.2rem; }
