--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -28,6 +28,7 @@
         left: -1rem;
         right: -1rem;
         opacity: 0;
+        z-index: 1;
         @include transition;
 
         &--blue {
