--- a/assets/sass/layouts/_list.scss
+++ b/assets/sass/layouts/_list.scss
@@ -12,4 +12,19 @@
             @include transition;
         }
     }
+
+    &__menu {
+        &:not(:last-of-type) {
+            &::after {
+                content: '';
+                display: block;
+                width: 0.4rem;
+                height: 0.4rem;
+                background-color: $color-black;
+                border-radius: 0.4rem;
+                margin-left: 1rem;
+                margin-bottom: 0.2rem;
+            }
+        }
+    }
 }
