--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,7 +13,9 @@
 @import 'base/utilities';
 // COMPONENTS
 @import 'components/buttons';
+@import 'components/logo';
 // LAYOUT
+@import 'layouts/banner';
 @import 'layouts/footer';
 @import 'layouts/form';
 @import 'layouts/header';
