--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2648,7 +2648,7 @@ body {
   font-size: 1rem;
   font-family: "avenirNextRegular", Arial, sans-serif;
   font-weight: 300;
-  line-height: 1;
+  line-height: 1.3;
   color: #333333; }
 
 .font--mcn {
@@ -2686,6 +2686,9 @@ body {
 
 .text--black {
   color: #333333; }
+
+.text--center {
+  text-align: center; }
 
 .heading--one {
   font-size: 4.3rem; }
@@ -2773,10 +2776,7 @@ body {
   height: auto; }
 
 .banner {
-  padding: 6rem 0 6rem 3rem; }
-  @media only screen and (min-width: 769px) and (max-width: 1280px) {
-    .banner {
-      padding: 10rem 0 10rem 4rem; } }
+  padding: 6rem 0 6rem 9%; }
   @media only screen and (min-width: 576px) and (max-width: 768px) {
     .banner {
       padding: 10rem 0 10rem 4rem; } }
@@ -2916,12 +2916,56 @@ body {
     color: #007EAf;
     transition: all .2s; }
 
-.list__menu:not(:last-of-type)::after {
-  content: '';
-  display: block;
-  width: 0.4rem;
-  height: 0.4rem;
-  background-color: #333333;
-  border-radius: 0.4rem;
-  margin-left: 1rem;
-  margin-bottom: 0.2rem; }
+.list__menu {
+  transition: all .2s; }
+  .list__menu a:hover {
+    color: #007EAf;
+    transition: all .2s; }
+  .list__menu:not(:last-of-type)::after {
+    content: '';
+    display: block;
+    width: 0.4rem;
+    height: 0.4rem;
+    background-color: #333333;
+    border-radius: 0.4rem;
+    margin-left: 1rem;
+    margin-bottom: 0.3rem; }
+
+.info__img {
+  width: 100%; }
+
+.info__anchor {
+  position: relative;
+  color: #333333;
+  text-decoration: none;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  overflow: hidden;
+  margin-bottom: 0.3rem;
+  transition: all 0.4s; }
+  .info__anchor::after {
+    content: '';
+    background-image: linear-gradient(to left, #333333 50%, #007EAf 50%);
+    background-size: 200% auto;
+    background-position: right center;
+    height: 3px;
+    width: 100%;
+    display: block; }
+  .info__anchor:hover {
+    padding-left: 2rem;
+    transition: all 0.4s; }
+    .info__anchor:hover::after {
+      background-position: left center;
+      transition: all 0.4s; }
+    .info__anchor:hover .info__anchor-icon {
+      left: 0;
+      transition: all 0.4s; }
+  .info__anchor-icon {
+    position: absolute;
+    left: -3rem;
+    top: -40%;
+    width: 2rem;
+    height: 2rem;
+    fill: #888888;
+    transition: all .2s; }
