--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -27,7 +27,7 @@ body {
     font-size: 1rem;
     font-family: $font-anr, Arial, sans-serif;
     font-weight: 300;
-    line-height: 1;
+    line-height: 1.3;
     color: $color-black;
 }
 
@@ -80,6 +80,9 @@ body {
 
     &--black {
         color: $color-black;
+    }
+    &--center {
+        text-align: center;
     }
 }
 
