--- a/assets/sass/layouts/_banner.scss
+++ b/assets/sass/layouts/_banner.scss
@@ -1,9 +1,6 @@
 .banner {
-    padding: 6rem 0 6rem 3rem;
+    padding: 6rem 0 6rem 9%;
 
-    @include respond(md) {
-        padding: 10rem 0 10rem 4rem;
-    }
     @include respond(sm) {
         padding: 10rem 0 10rem 4rem;
     }
