--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,6 +13,7 @@
 @import 'base/utilities';
 // COMPONENTS
 @import 'components/buttons';
+@import 'components/card';
 @import 'components/logo';
 // LAYOUT
 @import 'layouts/banner';
