--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -81,6 +81,7 @@ body {
     &--black {
         color: $color-black;
     }
+
     &--center {
         text-align: center;
     }
@@ -96,6 +97,9 @@ body {
 
     &--two {
         font-size: 3rem;
+        @media only screen and (max-width: 991px) {
+            font-size: 2rem;
+        }
     }
 
     &--three {
