--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2728,6 +2728,8 @@ body {
 
 .no--decoration {
   text-decoration: none; }
+  .no--decoration:visited {
+    color: inherit; }
 
 .line-height--lg {
   line-height: 1.8; }
@@ -2841,6 +2843,30 @@ body {
     top: 0;
     filter: brightness(0.7);
     z-index: -1; }
+
+.footer {
+  background-color: #F1F1F1; }
+  .footer__logo {
+    width: 7rem;
+    height: auto; }
+  .footer__title {
+    padding-top: 0.3rem; }
+  .footer__list-item:not(:last-of-type):after {
+    content: '';
+    display: block;
+    height: 80%;
+    width: 1px;
+    margin: 0 0.5rem;
+    background-color: #333333; }
+  .footer__social {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 3rem;
+    background-color: #007EAf; }
+    .footer__social-icon {
+      width: 50%;
+      height: 50%;
+      fill: #FFF; }
 
 .header__list-item {
   cursor: pointer;
