--- a/assets/sass/base/_utilities.scss
+++ b/assets/sass/base/_utilities.scss
@@ -17,6 +17,9 @@
 .no {
     &--decoration {
         text-decoration: none;
+        &:visited {
+            color: inherit;
+        }
     }
 }
 
