--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2723,6 +2723,9 @@ body {
 .position--absolute {
   position: absolute; }
 
+.position--unset {
+  position: unset; }
+
 .list--unstyled {
   list-style: none; }
 
@@ -2914,62 +2917,85 @@ body {
       background-color: #00597c;
       transition: all .2s; }
 
-.header--mobile__menu {
-  top: 4.8rem;
-  left: -22rem;
-  transition: all .4s;
+.header--mobile {
+  bottom: 0;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  padding-left: 15px;
+  width: 22rem;
   z-index: 3; }
-  .header--mobile__menu-icon {
-    width: 2rem;
-    height: 2px; }
-    .header--mobile__menu-icon::before, .header--mobile__menu-icon::after {
-      position: absolute;
-      content: '';
-      display: block;
-      left: 0;
-      right: 0;
-      height: 2px;
-      background-color: #000;
-      transition: all .2s; }
-    .header--mobile__menu-icon--closed {
-      background-color: #000; }
-      .header--mobile__menu-icon--closed::before {
-        top: -0.6rem;
-        transform: rotate(0);
+  .header--mobile::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    transition: width .4s; }
+  .header--mobile--opened::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    background-color: #FFF;
+    width: 100%;
+    height: 100%;
+    transition: width .4s; }
+  .header--mobile__menu {
+    width: 22rem;
+    top: 4.6rem;
+    left: -22rem;
+    transition: all .4s;
+    z-index: 3; }
+    .header--mobile__menu-icon {
+      width: 2rem;
+      height: 2px; }
+      .header--mobile__menu-icon::before, .header--mobile__menu-icon::after {
+        position: absolute;
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        height: 2px;
+        background-color: #000;
         transition: all .2s; }
-      .header--mobile__menu-icon--closed::after {
-        bottom: -0.6rem;
-        transform: rotate(0);
-        transition: all .2s; }
-    .header--mobile__menu-icon--opened {
-      background-color: transparent; }
-      .header--mobile__menu-icon--opened::before {
-        top: 0;
-        transform: rotate(-135deg);
-        transition: all .2s; }
-      .header--mobile__menu-icon--opened::after {
-        bottom: 0;
-        transform: rotate(135deg);
-        transition: all .2s; }
-
-.header--mobile__logo {
-  width: 10rem; }
-
-.header--mobile__icon {
-  width: 1.6rem;
-  height: 1.6rem; }
-
-.header--mobile__list {
-  background-color: #FFF; }
-  .header--mobile__list-item {
-    color: #333333; }
-  .header--mobile__list--blue {
-    background-color: #007EAf; }
-
-.header--mobile__chevron {
-  width: 1rem;
-  height: 1rem;
-  fill: #FFF; }
+      .header--mobile__menu-icon--closed {
+        background-color: #000; }
+        .header--mobile__menu-icon--closed::before {
+          top: -0.6rem;
+          transform: rotate(0);
+          transition: all .2s; }
+        .header--mobile__menu-icon--closed::after {
+          bottom: -0.6rem;
+          transform: rotate(0);
+          transition: all .2s; }
+      .header--mobile__menu-icon--opened {
+        background-color: transparent; }
+        .header--mobile__menu-icon--opened::before {
+          top: 0;
+          transform: rotate(-135deg);
+          transition: all .2s; }
+        .header--mobile__menu-icon--opened::after {
+          bottom: 0;
+          transform: rotate(135deg);
+          transition: all .2s; }
+  .header--mobile__logo {
+    width: 10rem;
+    z-index: 1; }
+  .header--mobile__icon {
+    width: 1.6rem;
+    height: 1.6rem; }
+  .header--mobile__list {
+    background-color: #FFF; }
+    .header--mobile__list-item {
+      color: #333333; }
+    .header--mobile__list--blue {
+      background-color: #007EAf; }
+  .header--mobile__chevron {
+    width: 1rem;
+    height: 1rem;
+    fill: #FFF; }
 
 .list__item {
   margin-bottom: 1.7rem; }
