--- a/assets/sass/layouts/_header.scss
+++ b/assets/sass/layouts/_header.scss
@@ -68,8 +68,40 @@
     }
 
     &--mobile {
+        bottom: 0;
+        top: 0;
+        left: 0;
+        background-color: $color-transparent;
+        padding-left: 15px;
+        width: 22rem;
+        z-index: 3;
+
+        &::before {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            width: 0;
+            height: 100%;
+            transition: width .4s;
+        }
+
+        &--opened {
+            &::before {
+                position: absolute;
+                content: '';
+                top: 0;
+                left: 0;
+                background-color: $color-white;
+                width: 100%;
+                height: 100%;
+                transition: width .4s;
+            }
+        }
+
         &__menu {
-            top: 4.8rem;
+            width: 22rem;
+            top: 4.6rem;
             left: -22rem;
             transition: all .4s;
             z-index: 3;
@@ -92,6 +124,7 @@
 
                 &--closed {
                     background-color: $color-black-dark;
+
                     &::before {
                         top: -0.6rem;
                         transform: rotate(0);
@@ -107,6 +140,7 @@
 
                 &--opened {
                     background-color: $color-transparent;
+
                     &::before {
                         top: 0;
                         transform: rotate(-135deg);
@@ -125,6 +159,7 @@
 
         &__logo {
             width: 10rem;
+            z-index: 1;
         }
 
         &__icon {
@@ -134,9 +169,11 @@
 
         &__list {
             background-color: $color-white;
+
             &-item {
                 color: $color-black;
             }
+
             &--blue {
                 background-color: $color-blue;
             }
