--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -20,4 +20,9 @@
         text-align: center;
         background-color: $color-white;
     }
+
+    &--animated {
+        opacity: 0;
+        margin-top: 1rem;
+    }
 }
