--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -85,6 +85,13 @@ body {
     &--center {
         text-align: center;
     }
+
+    &--animated {
+        right: 0;
+        left: 0;
+        top: 100%;
+        visibility: visible;
+    }
 }
 
 .heading {
