--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -56,9 +56,18 @@
         opacity: 0;
         transition: all .4s;
     }
+
     &-cards {
         margin-top: 5rem;
         background-color: $color-blue-light;
+        opacity: 0;
+    }
+
+    &-banner {
+        opacity: 0;
+    }
+
+    &-twitter {
         opacity: 0;
     }
 }
