--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -82,6 +82,10 @@ body {
         color: $color-black;
     }
 
+    &--grey {
+        color: $color-grey;
+    }
+
     &--center {
         text-align: center;
     }
